Update server.js to fix /control endpoint

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
     <div class="control-panel">
         <div class="control-group">
             <h3>Pump-Valve 1</h3>
-            <button onclick="controlDevice('V1', 1)">Turn On</button>
-            <button onclick="controlDevice('V1', 0)">Turn Off</button>
+            <button id="pump-valve-1" onclick="controlDevice('V1', 1)">Turn On Pump-Valve 1</button>
+            <button id="pump-valve-1-off" onclick="controlDevice('V1', 0)">Turn Off Pump-Valve 1</button>
         </div>
         <div class="control-group">
             <h3>Pump-Valve 2</h3>
-            <button onclick="controlDevice('V2', 1)">Turn On</button>
-            <button onclick="controlDevice('V2', 0)">Turn Off</button>
+            <button id="pump-valve-2" onclick="controlDevice('V2', 1)">Turn On Pump-Valve 2</button>
+            <button id="pump-valve-2-off" onclick="controlDevice('V2', 0)">Turn Off Pump-Valve 2</button>
         </div>
         <div class="control-group">
             <h3>Pump-Valve 3</h3>
-            <button onclick="controlDevice('V3', 1)">Turn On</button>
-            <button onclick="controlDevice('V3', 0)">Turn Off</button>
+            <button id="pump-valve-1" onclick="controlDevice('V3', 1)">Turn On Pump-Valve 3</button>
+            <button id="pump-valve-1-off" onclick="controlDevice('V3', 0)">Turn Off Pump-Valve 3</button>
         </div>
     </div>
 </body>
